<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.onBoarding.OnBoardingFeatureFragment">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20px"
        android:text="@string/Skip"
        android:textSize="12dp"
        android:id="@+id/skip">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/winners_rafiki"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </com.google.android.material.imageview.ShapeableImageView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_color"
        android:layout_marginHorizontal="52dp"
        android:layout_marginBottom="40dp"
        android:paddingVertical="12dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp"
        tools:ignore="VisualLintButtonSize">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/desc1"
        android:layout_marginBottom="20dp"
        android:text="@string/OnBoardingFeatureTitle"
        app:layout_constraintStart_toStartOf="@id/desc1"
        android:textSize="18dp"
        android:textStyle="bold">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/desc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/next_button"
        android:text="@string/OnBoardingFeatureDesc1"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/desc2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/desc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/next_button"
        android:text="@string/OnBoardingFeatureDesc2"
        app:layout_constraintStart_toStartOf="@id/next_button"
        android:layout_marginBottom="40dp">
    </com.google.android.material.textview.MaterialTextView>

</androidx.constraintlayout.widget.ConstraintLayout>