<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.fragments.AuthMainFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/authentication_rafiki"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:id="@+id/image_auth">
    </com.google.android.material.imageview.ShapeableImageView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/image_auth"
        app:layout_constraintStart_toStartOf="@id/email_input_layout"
        android:layout_marginTop="44dp">
    </com.google.android.material.textview.MaterialTextView>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_text"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_outline_email"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/email_input_layout"
        android:hint="@string/enter_email"
        app:hintEnabled="false"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="4dp">
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_label"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/enter_email"
            >
        </androidx.appcompat.widget.AppCompatEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
        app:layout_constraintStart_toStartOf="@id/email_input_layout"
        android:layout_marginTop="10dp">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/password_input_layout"
        android:layout_marginHorizontal="52dp"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/mdi_password_outline"
        android:layout_marginTop="4dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_label"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/password"
            >
        </androidx.appcompat.widget.AppCompatEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/help_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/help_pass"
        android:textColor="#2962FF"
        app:layout_constraintEnd_toEndOf="@id/password_input_layout"
        app:layout_constraintTop_toBottomOf="@id/password_input_layout">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/join_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/main_color"
        app:cornerRadius="12dp"
        android:text="@string/in_account"
        app:layout_constraintTop_toBottomOf="@id/help_pass"
        tools:ignore="TextContrastCheck,VisualLintButtonSize"
        tools:layout_editor_absoluteX="52dp">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_and"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/and"
        android:textColor="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/join_btn">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeColor="@color/black"
        android:backgroundTint="@color/white"
        app:strokeWidth="1dp"
        app:cornerRadius="12px"
        app:layout_constraintTop_toBottomOf="@id/txt_and"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="10dp"
        android:text="@string/in_google"
        android:textColor="@color/black"
        tools:ignore="VisualLintButtonSize">
    </com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>